added David coauthor

--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -714,6 +714,9 @@
            { name: "James Cheney",                
                   url:"http://homepages.inf.ed.ac.uk/jcheney/",    
                company: "University of Edinburgh, UK" },
+           { name: "David Corsar",                
+                  url:"http://homepages.abdn.ac.uk/dcorsar/pages/",    
+               company: "University of Aberdeen, UK" },
            { name: "Daniel Garijo",
                  url:"http://www.oeg-upm.net/index.php/en/phdstudents/28-dgarijo",
                    company: "Universidad Politécnica de Madrid, Spain" },
